--- a/src/favourite-ingredient.html
+++ b/src/favourite-ingredient.html
@@ -8,20 +8,22 @@
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Roboto:wght@400;700;900&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="./sass/index.scss" />
         <title>Cocktails</title>
-        <link type="image/x-icon" href="./img/icon/icon-drinks.png" rel="shortcut icon" />
     </head>
     <body>
         <include src="./partials/header.html"></include>
-        <include src="./partials/hero.html"></include>
-        <include src="./partials/cards.html"></include>
+        <section class="fav-ingredients">
+            <div class="container">
+                <h2 class="fav-ingredients__title">Favourite ingredients</h2>
+                <ul class="fav-list"></ul>
+            </div>
+        </section>
         <include src="./partials/cocktail-modal.html"></include>
         <include src="./partials/footer.html"></include>
 
-        <script type="module" src="./js/header.js"></script>
         <script type="module" src="./index.js"></script>
-        <script type="module" src="./js/addToFavourite.js"></script>
-        <script type="module" src="./js/creat-alphabet.js"></script>
-        <script type="module" src="./js/dark-light.js"></script>
+        <script type="module" src="./js/search-coctails.js"></script>
+        <script type="module" src="./js/header.js"></script>
         <script type="module" src="./js/modal_window.js"></script>
+        <script type="module" src="./js/dark-light.js"></script>
     </body>
 </html>
